# AI-QA-Testing-Framework

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini
.github/workflows/: qa.yml
datasets/: test_cases.json
src/aiqa_testing/: __init__.py  client.py  config.py  datasets.py  models.py  reporting.py  sample_builder.py
tests/: __init__.py  conftest.py  test_answer_relevancy.py  test_api_contract.py  test_context_precision.py  test_context_recall.py  test_data.py  test_faithfulness.py  test_negative_cases.py  test_regression_baseline.py  test_smoke.py
